# linz-s3-utils

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml  ruff.toml
docs/superpowers/specs/: 2026-04-23-catalog-search-design.md
src/examples/: elevation.ipynb  stac_explore.ipynb
src/linz_s3_utils/: __init__.py  cli.py  constants.py  dem.py  elevation.py  gdal.py  io.py  s3_vrt.py  stac.py  utils.py  vrt.py
src/linz_s3_utils/s3/: io.py  s3_vrt.py
src/linz_s3_utils/stac/: _io.py
src/notebooks/: explore_elevation.ipynb  stac_explore copy.ipynb  stac_explore.ipynb
src/scripts/: build_national_dem.py
tests/linz_s3_utils/: test_cli.py  test_compression.py  test_elevation.py  test_package_metadata.py  test_stac.py  test_stac_search.py  test_utils.py
tests/linz_s3_utils/stac/: test_elevation.py
